job se ejecuta todos los dias a las 12pm, primero comprueba que no existan ningun otro job que esta almacenado en arreglo y en el caso de ser afirmativo los cancela y vacia el arreglo.Luego obtiene todos los animes del archivo .json y guarda en un arreglo los animes que se emitiran en el respectivo dia. Recorre el arreglo de los animes del dia y genera jobs por cada anime. Cada job emite un embed a un determinado chat en cuando cumple el temporizador.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ dist/
 # Archivos de configuracion
 config.json
 
+# Archivos temporales
+Temp.ts
+
 # Archivos de configuración de desarrollo local
 .env
 .env.local
